# gpt

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/gpt/: attention.py  bigram_model.py  data.py  main.py  model.py  utils.py
tests/: test_unit.py
